# quic-connect-migration

./: .gitignore  README.md
data/: active-path-change-candidates-20260629.json  active-path-change-command-candidates-20260625.json  application-recovery-tradeoff-20260624.csv  aws-identity-readiness-20260625.json  aws-s2n-live-runner-safety-audit-20260701.json  aws-s2n-phase2-artifact-classifier-contract-20260701.json  aws-s2n-phase2-path-change-design-20260701.json  aws-s2n-phase2-rebinding-preflight-20260701.txt  aws-s2n-phase2-rebinding-runner-audit-20260701.json  browser-cm-observability-20260624.json  browser-cm-observability-matrix-20260624.csv  browser-cm-observability-refresh-20260630.json  cdn-edge-cm-boundary-audit-20260701.json  chrome-desktop-noniphone-buffered-media-local-refresh-20260701.csv  chrome-desktop-noniphone-media-local-refresh-20260630.csv  chrome-desktop-noniphone-musiclike-local-refresh-20260701.csv  chrome-desktop-noniphone-range-local-refresh-20260630.csv  chrome-desktop-noniphone-upload-local-refresh-20260630.csv  chrome-h3-rebinding-buffered-media-control-20260629.csv  chrome-h3-rebinding-media-segment-pilot-20260629.csv  chrome-h3-rebinding-media-segment-replication-20260629.csv  chrome-h3-rebinding-music-like-media-control-20260629.csv  chrome-h3-rebinding-old-path-drop-20260624.csv  chrome-h3-rebinding-old-path-drop-stress-20260624.csv  chrome-h3-rebinding-range-download-control-20260629.csv  (+113 more)
docs/: code-architecture-ko.md  (+3 more)
experiments/s2n-quic-nlb-cid-provider/: Cargo.toml
experiments/s2n-quic-nlb-cid-provider/src/: lib.rs
(+650 files in other folders)
