[package]
name = "s2n-quic-nlb-cid-provider"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hex = "0.4"
rcgen = "0.13"
s2n-quic = { git = "https://github.com/aws/s2n-quic", rev = "0f5a4f8ae4163f1b84e72cd29ad110ad99d7efd1", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
